--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,11 @@
             text-align: center;
         }
     </style>
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#00010D">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <div class="page-wrap">
